--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,94 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.background-ani {
+  animation: slideBackground 15s linear infinite;
+  animation-direction: alternate-reverse;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+@keyframes slideBackground {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 0;
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.bg-blue-gradient,
+.text-blue-gradient {
+  background-image: linear-gradient(
+      45deg,
+      rgb(67, 95, 221) 0%,
+      rgb(67, 95, 221) 22%,
+      rgb(80, 115, 203) 22%,
+      rgb(80, 115, 203) 48%,
+      rgb(92, 135, 185) 48%,
+      rgb(92, 135, 185) 73%,
+      rgb(105, 156, 167) 73%,
+      rgb(105, 156, 167) 77%,
+      rgb(118, 176, 149) 77%,
+      rgb(118, 176, 149) 87%,
+      rgb(130, 196, 131) 87%,
+      rgb(130, 196, 131) 89%,
+      rgb(143, 216, 113) 89%,
+      rgb(143, 216, 113) 100%
+    ),
+    linear-gradient(
+      90deg,
+      rgb(67, 95, 221) 0%,
+      rgb(67, 95, 221) 22%,
+      rgb(80, 115, 203) 22%,
+      rgb(80, 115, 203) 48%,
+      rgb(92, 135, 185) 48%,
+      rgb(92, 135, 185) 73%,
+      rgb(105, 156, 167) 73%,
+      rgb(105, 156, 167) 77%,
+      rgb(118, 176, 149) 77%,
+      rgb(118, 176, 149) 87%,
+      rgb(130, 196, 131) 87%,
+      rgb(130, 196, 131) 89%,
+      rgb(143, 216, 113) 89%,
+      rgb(143, 216, 113) 100%
+    ),
+    linear-gradient(
+      67.5deg,
+      rgb(67, 95, 221) 0%,
+      rgb(67, 95, 221) 22%,
+      rgb(80, 115, 203) 22%,
+      rgb(80, 115, 203) 48%,
+      rgb(92, 135, 185) 48%,
+      rgb(92, 135, 185) 73%,
+      rgb(105, 156, 167) 73%,
+      rgb(105, 156, 167) 77%,
+      rgb(118, 176, 149) 77%,
+      rgb(118, 176, 149) 87%,
+      rgb(130, 196, 131) 87%,
+      rgb(130, 196, 131) 89%,
+      rgb(143, 216, 113) 89%,
+      rgb(143, 216, 113) 100%
+    ),
+    linear-gradient(
+      157.5deg,
+      rgb(67, 95, 221) 0%,
+      rgb(67, 95, 221) 22%,
+      rgb(80, 115, 203) 22%,
+      rgb(80, 115, 203) 48%,
+      rgb(92, 135, 185) 48%,
+      rgb(92, 135, 185) 73%,
+      rgb(105, 156, 167) 73%,
+      rgb(105, 156, 167) 77%,
+      rgb(118, 176, 149) 77%,
+      rgb(118, 176, 149) 87%,
+      rgb(130, 196, 131) 87%,
+      rgb(130, 196, 131) 89%,
+      rgb(143, 216, 113) 89%,
+      rgb(143, 216, 113) 100%
+    ),
+    linear-gradient(90deg, rgb(195, 223, 84), rgb(118, 43, 234)) !important;
+  background-blend-mode: overlay, overlay, overlay, overlay, normal !important;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.text-gradient-util,
+.text-blue-gradient {
+  background-clip: text !important;
+  -webkit-background-clip: text !important;
+  color: transparent !important;
 }
