--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,15 @@
   0% {
     background-position: 0 0;
   }
+  25% {
+    background-position: 25% 60%;
+  }
+  50% {
+    background-position: 50% 20%;
+  }
+  50% {
+    background-position: 75% 30%;
+  }
   100% {
     background-position: 100% 0;
   }
