--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 .background-ani {
-  animation: slideBackground 18s linear infinite;
+  background-attachment: fixed;
+  animation: slideBackground 25s linear infinite;
   animation-direction: alternate-reverse;
 }
 
@@ -7,17 +8,8 @@
   0% {
     background-position: 0 0;
   }
-  25% {
-    background-position: 25% 0%;
-  }
-  50% {
-    background-position: 50% 20%;
-  }
-  75% {
-    background-position: 75% 30%;
-  }
   100% {
-    background-position: 100% 0;
+    background-position: 100% 100%;
   }
 }
 
@@ -100,4 +92,20 @@
   background-clip: text !important;
   -webkit-background-clip: text !important;
   color: transparent !important;
+}
+
+.imdb-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #000000;
+  padding: 7px 10px;
+}
+
+.imdb {
+  color: transparent;
+  background-image: linear-gradient(45deg, rgb(255, 231, 52), #ff4345);
+  background-clip: text;
+  -webkit-background-clip: text;
+  font-weight: 700 !important;
 }
