--- a/scss/app.scss
+++ b/scss/app.scss
@@ -107,8 +107,8 @@ $gutters: (
 .wrapper.yelred::-webkit-scrollbar-thumb {
   background-image: linear-gradient(
     45deg,
-    rgb(255, 231, 52),
-    #ff4345
+    #ff4345,
+    rgb(255, 231, 52)
   ) !important;
 }
 
@@ -120,7 +120,7 @@ $gutters: (
 /* Firefox */
 .wrapper {
   scrollbar-color: transparent
-    linear-gradient(45deg, rgb(255, 231, 52), #ff4345);
+    linear-gradient(45deg, #ff4345, rgb(255, 231, 52));
 }
 
 /* Internet Explorer and Edge (Older versions) */
