--- a/app/globals.css
+++ b/app/globals.css
@@ -94,7 +94,8 @@
   color: transparent !important;
 }
 
-.imdb-wrapper {
+.imdb-wrapper,
+.department-wrapper {
   position: absolute;
   top: 0;
   right: 0;
@@ -102,7 +103,8 @@
   padding: 0px 10px;
 }
 
-.imdb {
+.imdb,
+.department {
   color: transparent;
   background-image: linear-gradient(45deg, rgb(255, 231, 52), #ff4345);
   background-clip: text;
