--- a/app/globals.css
+++ b/app/globals.css
@@ -94,7 +94,7 @@
   color: transparent !important;
 }
 
-.imdb-wrapper,
+.user_score-wrapper,
 .department-wrapper {
   position: absolute;
   top: 0;
@@ -103,7 +103,7 @@
   padding: 0px 10px;
 }
 
-.imdb,
+.user_score,
 .department {
   color: transparent;
   background-image: linear-gradient(45deg, rgb(255, 231, 52), #ff4345);
