--- a/scss/app.scss
+++ b/scss/app.scss
@@ -144,30 +144,21 @@ $blue-trans-background: linear-gradient(
 }
 
 // You need to update these colors whenever you change the theme
-body {
-  scrollbar-color: #222b45; // background paper
-  &::-webkit-scrollbar {
-    background-color: #222b45; // background paper
-  }
-  &::-webkit-scrollbar-thumb {
-    border-radius: 12px;
-    background-color: rgb(55, 125, 255); // primary main
-    min-height: 10px;
-    border: solid 1px rgb(255, 225, 2); // secondary main
-  }
-  // &::-webkit-scrollbar-thumb:focus {
-  //   background-color: #222b45;
-  // }
-  // &::-webkit-scrollbar-thumb:active {
-  //   background-color: #222b45;
-  // }
-  // &::-webkit-scrollbar-thumb:hover {
-  //   background-color: #222b45;
-  // }
-  &::-webkit-scrollbar-corner {
-    background-color: #222b45; // background paper
-  }
-}
+// body {
+//   scrollbar-color: #222b45; // background paper
+//   &::-webkit-scrollbar {
+//     background-color: #222b45; // background paper
+//   }
+//   &::-webkit-scrollbar-thumb {
+//     border-radius: 12px;
+//     background-color: rgb(55, 125, 255); // primary main
+//     min-height: 10px;
+//     border: solid 1px rgb(255, 225, 2); // secondary main
+//   }
+//   &::-webkit-scrollbar-corner {
+//     background-color: #222b45; // background paper
+//   }
+// }
 
 // scrollbar-color: red;
 //   &::-webkit-scrollbar,
